[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PlayerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/background tile.png" type="Texture" id=3]
[ext_resource path="res://World/World.gd" type="Script" id=4]

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
motion_mirroring = Vector2( 320, 192 )

[node name="BackgroundTile" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.423529, 0.360784, 0.360784, 1 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 320, 192 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 89 )
current = true

[node name="PlayerUI" parent="Camera2D" instance=ExtResource( 2 )]
margin_left = -160.0
margin_top = -89.0
margin_right = 160.0
margin_bottom = 91.0

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 160, 89 )

[node name="AnimatedSprite" parent="YSort/Player" index="0"]
frame = 3

[node name="RemoteTransform2D" parent="YSort/Player" index="4"]
remote_path = NodePath("../../../Camera2D")

[node name="PickupTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="PickupTimer" to="." method="_on_PickupTimer_timeout"]

[editable path="Camera2D/PlayerUI"]
[editable path="YSort/Player"]
[editable path="YSort/Player/Hurtbox"]
[editable path="YSort/Player/SoftCollision"]
